Fixes layout issues caused by scrollbar Because Windows has a wider scrollbar than mac, we weren't leaving enough space for the scrollbar.

--- a/webpage/css/web.css
+++ b/webpage/css/web.css
@@ -1,5 +1,5 @@
 #docmd-container {
-    max-width: 1080px;
+    max-width: 1085px;
 }
 
 #guide-toc-toggle {
@@ -15,7 +15,7 @@
 #navigation-container {
     position: relative;
     display: inline-block;
-    width: 325px;
+    width: 330px;
     padding-left: 10px;
 }
 
@@ -26,7 +26,7 @@
     overflow-y: auto;
     top: 0;
     bottom: 0;
-
+    width: 330px;
 
 }
 
